# webgpu-raytracer

./: .env  .env.example  LICENSE  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_puppeteer.js  vite.config.ts  wrangler.jsonc
.github/workflows/: npm-publish-github-packages.yml
docs/: index.html
docs/assets/: index-0aI7F__3.js  index-1LjPi7ck.js  index-4kkJ6rdQ.js  index-53wbfYTG.js  index-87dcyUeZ.js  index-AFSzW-of.js  index-B0PRHka-.js  index-B3SXIQG4.js  index-B54lnND1.js  index-B8hJMcmK.js  index-BA0v73Gv.js  index-BEUuJTFM.js  index-BEn0Rz7K.js  index-BHb1Njai.js  index-BIiL-5sE.js  index-BRyC_C1s.js  index-BYjUUtv0.js  index-BYlYh7wf.js  index-BZVxTuYM.js  index-B_00nuMH.js  index-BbvCQFNu.js  index-BiVzQRpF.js  index-BkdxBU6a.js  index-Bmdvfrhr.js  index-BnkES_fB.js  index-Bu4R7NZe.js  index-BvrAFUar.js  index-BvtRTsOA.js  index-ByzOd3oY.js  index-C3eTgF2X.js  index-C5hO9He7.js  index-CCFrZCs5.js  (+89 more)
rust-shader-tools/: .gitignore  Cargo.toml
rust-shader-tools/src/: bvh.rs  geometry.rs  lib.rs  loader.rs  mesh.rs  primitives.rs  rebuilder.rs  render_buffers.rs
rust-shader-tools/src/bvh/: blas.rs  mod.rs  tlas.rs
rust-shader-tools/src/scene/: animation.rs  camera.rs  factory.rs  helpers.rs  material.rs  mod.rs  node.rs  procedural.rs  scenes.rs
signaling-server/: admin.html  package.json  server.ts  tsconfig.json
src/: PostProcess.wgsl  Raytracer.wgsl  bvh.ts  config.ts  main.ts  math.ts  mesh.ts  primitives.ts  render.worker.ts  renderer.ts  scene.ts  shader.wgsl  shader_debug.wgsl  world-bridge.ts
(+20 files in other folders)
