[package]
name = "rust-shader-tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Wasmとしてビルドするために必須

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1" # パニック時にJSコンソールにエラーを出す用
glam = "0.30.9"
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
gltf = "1.4.1"
byteorder = "1.5.0"
web-sys = { version = "0.3", features = ["console"] }
